@@ -192,3 +192,4 @@ wxOSX/Cocoa:
   events (Igor Korot).
 - Implement strike-through support in wxFont (Igor Korot).
 - Provide native implementation of wxStandardPaths (Tobias Taschner).
+- Add wxTE_{RIGHT,CENTER} support for multiline wxTextCtrl (Andreas Falkenhahn).
